# djangorestframework-openapi-gen

./: .gitignore  .pre-commit-config.yaml  LICENSE  requirements.txt  setup.cfg
src/rest_framework_openapi_gen/: __init_.py  __main__.py  json_pointer.py  parser.py  utils.py
src/rest_framework_openapi_gen/renderer/: __init__.py  codegen.py  exceptions.py  models.py  naming_conv.py
src/rest_framework_openapi_gen/renderer/tests/: test_naming_conv.py
src/rest_framework_openapi_gen/templates/: serializers.py.jinja2  urls.py.jinja2  views.py.jinja2
src/rest_framework_openapi_gen/tests/: test_json_pointer.py  test_utils.py
src/rest_framework_openapi_gen/tests/fixtures/: 001.yaml
