[metadata]
name = djangorestframework-openapi-gen
description = Generate a Django Rest Framework serializers and views from an OpenAPI spec.
url = https://github.com/opencollector/djangorestframework-openapi-gen
long_description = file:README.md
long_description_content_type = text/markdown
author = Open Collector, inc.
author_email = <info@opencollector.co.jp>
keywords = django drf openapi generation
license = MIT License
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
include_package_data = True
python_requires = >= 3.6
setup_requires =
    setuptools>=38.6.0
    wheel>=0.31.0
    setuptools-scm>=6.*
install_requires =
    black>=21.*
    jinja2>=3.*
    PyYAML>=5.*
    click_pathlib>=2020.*
tests_require =
    pytest
packages = find:
package_dir =
    = src

[options.extras_require]
dev =
    flake8>=3.9.*
    isort>=5.*
    jinja2>=3.*
    mypy>=0.910
    pytest>=6.2.*
    sphinx>=4.*
    sphinx-rtd-theme>=0.5.*
    types-PyYAML

[options.package_data]
* =
    py.typed
    *.jinja2

[options.packages.find]
where = src

[mypy]
files = src/

[flake8]
max-line-length = 88
extend-ignore =
    E203,
    E501
exclude =
    build/lib,
    .eggs
    .tox,
    env
    .venv

[isort]
profile = black
known_first_party = rest_framework_openapi_gen
skip=
    build/lib,
    .eggs
    .tox,
    env
    .venv
